config: add remote subscription

--- a/ui/config/config.css
+++ b/ui/config/config.css
@@ -429,3 +429,9 @@ input[type="checkbox"] {
   width: 15px;
   height: 15px;
 }
+
+textarea {
+  padding: 3px;
+  white-space: nowrap;
+  overflow: hidden;
+}
