--- a/ui/jobs/jobs.css
+++ b/ui/jobs/jobs.css
@@ -1269,6 +1269,16 @@ div.justbuffs div#procs-container {
   background-color: rgb(30 80 170);
 }
 
+/* PCT */
+.pct-color-palettegauge {
+  /* Rainbow color */
+  background: linear-gradient(90deg, #2d68b1, #c4247f, #fac16d, #e4f57b, #0a9b4f, #0bab7a, #0bb4a8);
+}
+
+.pct-color-whitepaint {
+  background-color: rgb(192 250 255);
+}
+
 /* BLU */
 .blu-color-offguard {
   background-color: rgb(210 255 196);
