--- a/ui/jobs/jobs.css
+++ b/ui/jobs/jobs.css
@@ -1279,6 +1279,16 @@ div.justbuffs div#procs-container {
   background-color: rgb(192 250 255);
 }
 
+@keyframes pct-whitepaint-pulse {
+  50% {
+    background-color: rgb(48, 207, 221);
+  }
+}
+
+.pct-color-whitepaint.pulse {
+  animation: pct-whitepaint-pulse 1s infinite;
+}
+
 /* BLU */
 .blu-color-offguard {
   background-color: rgb(210 255 196);
