--- a/ui/jobs/jobs.css
+++ b/ui/jobs/jobs.css
@@ -689,6 +689,10 @@ div.justbuffs div#procs-container {
   background-color: rgb(62 224 170);
 }
 
+.whm-color-pom {
+  background-color: rgb(230 100 140);
+}
+
 .whm-color-lucid {
   background-color: rgb(227 148 210);
 }
