fix: GCD init and threshold, error class, Ricon

--- a/ui/jobs/jobs.css
+++ b/ui/jobs/jobs.css
@@ -261,7 +261,8 @@ div.justbuffs div#procs-container {
 .mch #right-side-icons,
 .dnc #right-side-icons,
 .smn #right-side-icons,
-.rdm #right-side-icons {
+.rdm #right-side-icons,
+.pct #right-side-icons {
   left: 278px;
 }
 
