--- a/ui/jobs/jobs.css
+++ b/ui/jobs/jobs.css
@@ -1232,6 +1232,11 @@ div.justbuffs div#procs-container {
 }
 
 .blm-color-dot {
+  background-color: rgb(200 110 245);
+}
+
+
+.blm-color-manafont {
   background-color: rgb(110 186 245);
 }
 
