--- a/ui/jobs/jobs.css
+++ b/ui/jobs/jobs.css
@@ -1116,6 +1116,10 @@ div.justbuffs div#procs-container {
   background-color: rgb(65 22 0);
 }
 
+.vpr-color-rattling-coil {
+  background-color: rgb(105 50 13);
+}
+
 /* BRD */
 .brd-color-causticbite {
   background-color: rgb(182 68 235);
