add dread combo timer

--- a/ui/jobs/jobs.css
+++ b/ui/jobs/jobs.css
@@ -1124,6 +1124,10 @@ div.justbuffs div#procs-container {
   background-color: rgb(255 200 60);
 }
 
+.vpr-color-dreadcombo {
+  background-color: rgb(99 123 77);
+}
+
 /* BRD */
 .brd-color-causticbite {
   background-color: rgb(182 68 235);
