--- a/ui/jobs/jobs.css
+++ b/ui/jobs/jobs.css
@@ -1116,16 +1116,28 @@ div.justbuffs div#procs-container {
   background-color: rgb(255 60 140);
 }
 
-.vpr-color-rattling-coil {
-  background-color: rgb(255 60 50);
-}
-
 .vpr-color-swiftscaled {
   background-color: rgb(255 200 60);
 }
 
 .vpr-color-dreadcombo {
   background-color: rgb(99 123 77);
+}
+
+.vpr-color-rattling-coil {
+  background-color: rgb(255 60 50);
+}
+
+.vpr-color-serpentofferings {
+  background-color: rgb(255 30 20 / 30%);
+}
+
+.vpr-color-serpentofferings.high {
+  background-color: rgb(90 150 220);
+}
+
+.vpr-color-serpentofferings.active {
+  background-color: rgb(130 255 255);
 }
 
 /* BRD */
