fix: raidbuff position

--- a/ui/jobs/jobs.css
+++ b/ui/jobs/jobs.css
@@ -257,6 +257,7 @@ div.justbuffs div#procs-container {
 .nin #right-side-icons,
 .sam #right-side-icons,
 .rpr #right-side-icons,
+.vpr #right-side-icons,
 .brd #right-side-icons,
 .mch #right-side-icons,
 .dnc #right-side-icons,
